--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.4",
+    "@types/react-input-mask": "^3.0.1",
     "axios": "^0.23.0",
     "next": "11.1.2",
     "react": "17.0.2",
